--- a/app.json
+++ b/app.json
@@ -3,11 +3,7 @@
     "name": "Blank Template (TypeScript)",
     "slug": "shop-review-app",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,22 +15,20 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "extra": {
       "firebase": {
-        "apiKey": "your-api-key",
-        "authDomain": "your-app.firebaseapp.com",
-        "databaseURL": "https://your-app.firebaseio.com",
-        "projectId": "your-app",
-        "storageBucket": "your-app.appspot.com",
-        "messagingSenderId": "your-messageging-sender-id",
-        "appId": "your-app-id",
-        "measurementId": "your-measurement-id"
+        "apiKey": "AIzaSyA09AEVUT8iMa3JYhgO1LKYGK3TxIG4UM4",
+        "authDomain": "shop-review-ab183.firebaseapp.com",
+        "databaseURL": "https://shop-review-ab183.firebaseio.com",
+        "projectId": "shop-review-ab183",
+        "storageBucket": "shop-review-ab183.appspot.com",
+        "messagingSenderId": "755727110397",
+        "appId": "1:755727110397:web:094dbc5f352d56837bae94",
+        "measurementId": "G-ECKP3HKJBJ"
       },
       "algolia": {
         "appId": "your-app-id",
