--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-constants": "~9.3.3",
     "expo-image-picker": "~9.2.0",
     "expo-notifications": "~0.8.2",
-    "firebase": "7.9.0",
+    "firebase": "^8.10.0",
     "moment": "^2.25.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
